# demo-transformer

./: .gitignore  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: basic_usage.py  data_example.py  debug_printing_example.py  gradient_checkpointing_example.py  inference_translation_model.py  relative_pos_example.py  rope_example.py  train_translation_model.py  visualization_example.py
src/demo_transformer/: __init__.py  attention.py  config.py  data.py  debug_utils.py  decoder.py  encoder.py  feed_forward.py  inference_utils.py  multi_head_attention.py  positional_encoding.py  relative_attention.py  relative_positional_encoding.py  rope_attention.py  rotary_positional_encoding.py  training.py  transformer.py  visualization.py
tests/: test_attention.py  test_decoder.py  test_encoder.py  test_feed_forward.py  test_relative_attention.py  test_rope.py  test_rope_attention.py  test_standard_attention.py  test_transformer.py
