[project]
name = "demo-transformer"
version = "0.2.0"
description = "A comprehensive implementation of the Transformer Encoder-Decoder architecture for sequence-to-sequence tasks"
authors = [
    {name = "Zhurun Zhang", email = "zhurunz@amazon.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0,<3.0.0",
    "numpy>=2.2.6,<3.0.0"
]

[project.urls]
Repository = "https://github.com/zhurunz/demo-transformer"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
